@@ -33,7 +33,7 @@ public class ExtendDependency extends Dependency {
 	}
 	
 	public static void main(String [] args) {
-		Long l = new Long("32323232");
+		Long l = Long.valueOf("32323232");
 		new ExtendDependency(l, "ssa");
 	}
 }
